# PersonScout

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  logger.py  requirements.txt  test.py  tyzer.md  utils.py
model_repository/audio_class/: config.pbtxt
model_repository/audio_model/: config.pbtxt
model_repository/text_class/1/: model.pt
nginx/: nginx.conf
project/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
project/django_video/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
project/login/: forms.py  models.py  urls.py  views.py
project/login/migrations/: 0001_initial.py  0002_alter_customuser_first_name_and_more.py  0002_alter_customuser_preferred_speciality.py  0002_initial.py  0003_rename_preferred_speciality_customuser_speciality.py
project/login/static/login/css/: styles.css
project/login/templates/login/: account.html  login.html  register.html
project/video_app/: forms.py  models.py  tasks.py  triton_utils.py  urls.py  utils.py  views.py
project/video_app/migrations/: 0001_initial.py  0002_auto_20241109_2253.py  0002_personality_personalitygroup_video_delete_fileupload_and_more.py  0002_remove_video_cluster_alter_video_vector.py  0003_vacancy_vector.py  0004_auto_20241109_1521.py  data.json
project/video_app/static/video_app/css/: styles.css
project/video_app/static/video_app/js/: radar-chart.js  script.js
project/video_app/templates/video_app/: base.html  candidat.html  header.html  hr_main.html  index.html  vacancies.html  vacancy_description.html  video_add.html  video_load.html
(+11 files in other folders)
